infras/k8s-yaml/ingress/05_nginx_ingress_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30003   # map tới host port 8080 (đã config trong kind)
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    nodePort: 30001   # map tới host port 443
    protocol: TCP
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
