infras/k8s-yaml/ingress/01_ingress_public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-public
  namespace: gateway
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    # Kong API Gateway — toàn bộ API traffic từ frontend/Postman đi qua đây
    - host: api.job7189.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kong-proxy
                port:
                  number: 80

---
# Keycloak tách ra file riêng vì khác namespace
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-keycloak
  namespace: security        # namespace chứa keycloak
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"  # Keycloak header lớn
spec:
  ingressClassName: nginx
  rules:
    - host: auth.job7189.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
